Fix #201 -- Reset logo alignment in slider mode

--- a/pyconde/skins/ep14/static/assets/sass/_sponsorship.scss
+++ b/pyconde/skins/ep14/static/assets/sass/_sponsorship.scss
@@ -32,6 +32,7 @@
                     max-width: 112px;
                     max-height: 55px;
                     vertical-align: middle;
+                    display: inline-block;
                 }
             }
         }
